# MatrixOS

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
docs/: MatrixOS-Architecture.md  user_guide.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_telemetry.sql  003_mcp_servers.sql  004_message_telemetry.sql  005_audit_log.sql  006_skills.sql  007_memory.sql  008_schedules.sql  009_knowledge_bases.sql  010_processes.sql  011_workflows.sql  012_append_only_triggers.sql  013_mcp_drop_legacy.sql  014_scheduled_jobs_name_and_failures.sql  015_default_embedding_nomic.sql  016_orphan_telemetry_on_cascade.sql  017_messages_sources_json.sql  018_messages_compaction.sql  019_agent_templates.sql  020_observability.sql
src-tauri/src/: db.rs  lib.rs  lifecycle.rs  main.rs  vector_db.rs
src-tauri/src/audit/: mod.rs
src-tauri/src/fs/: audit.rs  mod.rs  path_utils.rs  policy.rs  ssrf.rs  types.rs  user_paths.rs  validation.rs  web.rs
src-tauri/src/ipc/: audit.rs  config.rs  diag.rs  fs.rs  glob.rs  grep.rs  llm.rs  mcp.rs  mod.rs  process.rs  resources.rs  scheduler.rs  search.rs  shell.rs
src-tauri/src/mcp/: http.rs  hygiene.rs  mod.rs  registry.rs  stdio.rs  types.rs
src-tauri/src/proc/: mod.rs  store.rs  supervisor.rs  types.rs
src-tauri/src/providers/: claude.rs  debug_dump.rs  error.rs  http.rs  local.rs  mod.rs  ollama.rs  openai_compatible.rs  provider.rs  rate_limit.rs  registry.rs  types.rs
src-tauri/src/scheduler/: engine.rs  mod.rs  store.rs  types.rs
src-tauri/src/tray/: mod.rs
src-tauri/tests/: mcp_stdio_integration.rs
src/__tests__/: context-budget.test.ts  event-bus.test.ts  lifecycle.test.ts  (+3 more)
(+232 files in other folders)
